# spotify-client

./: .gitignore  package-lock.json  package.json
app/: .eslintrc.json  BridgingHeader.h  build-rust.sh  layout.html  package-lock.json  package.json
app/.cargo/: config
app/Albumify/: AlbumifyApp.swift  Spotify.swift
app/Albumify.xcodeproj/: project.pbxproj
app/Albumify/Views/: ContentView.swift
app/src/: main.ts
playback/: Cargo.toml  index.js
playback-node/: Cargo.toml  package-lock.json  package.json
playback-node/npm/darwin-arm64/: README.md
playback-node/src/: session.rs
playback/examples/: player.rs
playback/npm/darwin-arm64/: package.json
playback/src/: lib.rs
spotify/: Cargo.toml  README.md  build.rs
spotify-ffi/: Cargo.toml
spotify-ffi/src/: actor.rs  command.rs  lib.rs  request.rs  session.rs
spotify-ffi/src/command/: pause.rs  play_album.rs
spotify-ffi/src/request/: get_state.rs
spotify-node/: Cargo.toml  index.js  package-lock.json  package.json  rustfmt.toml
spotify-node/npm/darwin-arm64/: README.md  package.json
spotify-node/src/: lib.rs  session.rs
spotify/.cargo/: config
spotify/examples/: player.rs
spotify/src/: actor.rs  command.rs  lib.rs  playback.rs  request.rs  session.rs
spotify/src/command/: next_track.rs  pause.rs  play.rs  play_album.rs  previous_track.rs  set_track_position.rs  set_volume.rs
spotify/src/playback/: connection.rs
spotify/src/request/: get_state.rs  library_albums.rs  position.rs
src/: index.html
src/main/: main.ts
src/renderer/: index.tsx
webpack/: react.webpack.ts
(+14 files in other folders)
