[package]
edition = "2021"
name = "spotify-ffi"
version = "0.1.0"

build = "build.rs"

[build-dependencies]
swift-bridge-build = "0.1"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-trait = "0.1"
enum_dispatch = "0.3"
futures = "0.3"
log = "0.4"
simple_logger = "4.0.0"
spotify = {path = "../spotify"}
swift-bridge = {version = "0.1", features = ["async"]}
tokio = {version = "1", features = ["full"]}
