[package]
edition = "2021"
name = "spotify"
version = "0.1.0"

build = "build.rs"

[build-dependencies]
swift-bridge-build = "0.1"

[lib]
crate-type = ["staticlib"]

[dependencies]
futures = "0.3"
librespot = {git = "https://github.com/oeed/librespot", branch = "spirc-load-command"}
swift-bridge = {version = "0.1", features = ["async"]}
tokio = "1"
